--- a/USPSC-pre-textual-IFSC.tex
+++ b/USPSC-pre-textual-IFSC.tex
@@ -5,7 +5,7 @@
 \unidade{INSTITUTO DE F\'ISICA DE S\~AO CARLOS}
 \unidademin{Instituto de F\'isica de S\~ao Carlos}
 \universidademin{Universidade de S\~ao Paulo}
-\notafolharosto{Vers\~ao original}
+\notafolharosto{Original Version}
 %Para versão original em inglês, comente do comando/declaração 
 %     acima(inclua % antes do comando acima) e tire a % do 
 %     comando/declaração abaixo no idioma do texto
@@ -21,8 +21,8 @@
 % dados complementares para CAPA e FOLHA DE ROSTO
 % ---
 \universidade{UNIVERSIDADE DE S\~AO PAULO}
-\titulo{Modelo para teses e disserta\c{c}\~oes em \LaTeX\ utilizando a classe USPSC para o IFSC}
-\titleabstract{Model for theses and dissertations in \LaTeX\ using the USPSC class to the IFSC}
+\titulo{Muons in Air Showers}
+\titleabstract{Muons in Air Showers}
 \autor{Raul Ribeiro Prado}
 \autorficha{Prado, R. R.}
 \autorabr{PRADO, R. R.}
@@ -33,7 +33,7 @@
 %\cutter{ }
 
 \local{S\~ao Carlos}
-\data{2017}
+\data{2018}
 % Quando for Orientador, basta incluir uma % antes do comando abaixo
 %\renewcommand{\orientadorname}{Orientador:}
 % Quando for Coorientadora, basta tirar a % utilizar o comando abaixo
@@ -47,20 +47,20 @@
 %\orientadorcorpoficha{orientadora Elisa Gon\c{c}alves Rodrigues ;  co-orientador Jo\~ao Alves Serqueira}
 %\orientadorficha{Rodrigues, Elisa Gon\c{c}alves, orient. II. Serqueira, Jo\~ao Alves, co-orient}
 
-\notaautorizacao{AUTORIZO A REPRODU\c{C}\~AO E DIVULGA\c{C}\~AO TOTAL OU PARCIAL DESTE TRABALHO, POR QUALQUER MEIO CONVENCIONAL OU ELETR\^ONICO PARA FINS DE ESTUDO E PESQUISA, DESDE QUE CITADA A FONTE.}
-\notabib{Ficha catalogr\'afica revisada pelo Servi\c{c}o de Biblioteca e Informa\c{c}\~ao Prof. Bernhard Gross, com os dados fornecidos pelo(a) autor(a)}
+\notaautorizacao{AUTHORIZE THE REPRODUCTION AND DISSEMINATION OF TOTAL OR PARTIAL COPIES OF THIS THESIS, BY CONVENCIONAL OR ELECTRONIC MEDIA FOR STUDY OR RESEARCH PURPOSE, SINCE IT IS REFERENCED.}
+\notabib{Cataloguing data reviewed by the Library and Information Service of the IFSC, with information provided by the author}
 
 \newcommand{\programa}[1]{
 
 % DFA ==========================================================================
     \ifthenelse{\equal{#1}{DFA}}{
-     	\tipotrabalho{Tese (Doutorado em Ci\^encias)}
-        \area{F\'isica Aplicada}
+     	\tipotrabalho{Thesis (Doctorate in Science)}
+        \area{Basic Physics}
 		%\opcao{Nome da Opção}
         % O preambulo deve conter o tipo do trabalho, o objetivo, 
 		% o nome da instituição, a área de concentração e opção quando houver
-		\preambulo{Tese apresentada ao Programa de P\'os-Gradua\c{c}\~ao em F\'isica do Instituto de F\'isica de S\~ao Carlos da Universidade de S\~ao Paulo, para obten\c{c}\~ao do t\'itulo de Doutor em Ci\^encias.}
-		\notaficha{Tese (Doutorado - Programa de P\'os-Gradua\c{c}\~ao em F\'isica Aplicada)}
+		\preambulo{Thesis submitted to the Physics Graduate Program at the SÃ£o Carlos Institute of Physics, University of SÃ£o Paulo, to obtain the degree of Doctor of Sciences}
+		\notaficha{Thesis (Doctorate - Graduate Program in Basic Physics)}
     }{
 % MFA ===========================================================================
         \ifthenelse{\equal{#1}{MFA}}{
