--- a/introduction.tex
+++ b/introduction.tex
@@ -17,13 +17,19 @@ the precise measurements of their energy spectra and other features
 became possible after the 1990's, with the experiments Fly's Eyes,
 HiRes and AGASA. During the last decade, two modern experiments have
 been running at the ultra-high energy range, Pierre Auger Observatory
-and Telescope Array.
+and Telescope Array. 
 Even though a large number of important results have been provided
 by these experiments lately, the main question about the origin
 of ultra-high energy cosmic rays are still unsolved. 
 Apart from knowing the astrophysical sources and the acceleration
 mechanisms, it is also unclear what is the exact nature of two evident structures
-observed in the energy spectrum, the \emph{ankle} and the \emph{suppression}.
+observed in the ultra-high energy spectrum, the \emph{ankle} and the \emph{suppression}.
+
+
+
+
+Because of the very low flux of particles at the 
+
 
 
 The compreesion of the astrophysical aspects behind the cosmic rays
@@ -31,6 +37,9 @@ is mainly complicated by the fact that they cannot be directly measured
 at the high energy regime. Their detection is actually done by measuring
 the cascade of particles created by the interaction of the cosmic ray particle
 with atmospheric nuclei, the so called \emph{Extensive Air Showers}.  
+
+
+Thus, the properties of the primary particles have to be infered from
 
 
 The inferences of the properties of the primary cosmic ray have then
