--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,57 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Aloisio:2017ooo,
+      author         = "Aloisio, Roberto and Blasi, Pasquale and De Mitri, Ivan
+                        and Petrera, Sergio",
+      title          = "{Selected Topics in Cosmic Ray Physics}",
+      year           = "2017",
+      eprint         = "1707.06147",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1707.06147;%%"
+}
+
+@article{Cronin:2004ye,
+      author         = "Cronin, James W.",
+      title          = "{The Highest - energy cosmic rays}",
+      booktitle      = "{Proceedings, 8th International Workshop on Topics in
+                        Astroparticle and Undeground Physics (TAUP 2003): Seattle,
+                        USA, September 5-9, 2003}",
+      journal        = "Nucl. Phys. Proc. Suppl.",
+      volume         = "138",
+      year           = "2005",
+      pages          = "465-491",
+      doi            = "10.1016/j.nuclphysbps.2004.11.107",
+      note           = "[,465(2004)]",
+      eprint         = "astro-ph/0402487",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0402487;%%"
+}
+
+@article{Zatsepin:1966jv,
+      author         = "Zatsepin, G. T. and Kuzmin, V. A.",
+      title          = "{Upper limit of the spectrum of cosmic rays}",
+      journal        = "JETP Lett.",
+      volume         = "4",
+      year           = "1966",
+      pages          = "78-80",
+      note           = "[Pisma Zh. Eksp. Teor. Fiz.4,114(1966)]",
+      SLACcitation   = "%%CITATION = JTPLA,4,78;%%"
+}
+
+@article{Greisen:1966jv,
+      author         = "Greisen, Kenneth",
+      title          = "{End to the cosmic ray spectrum?}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "16",
+      year           = "1966",
+      pages          = "748-750",
+      doi            = "10.1103/PhysRevLett.16.748",
+      SLACcitation   = "%%CITATION = PRLTA,16,748;%%"
+}
+
 @article{CIC1961,
   title = {Observations of Extensive Air Showers near the Maximum of Their Longitudinal Development},
   author = {Hersil, J. and Escobar, I. and Scott, D. and Clark, G. and Olbert, S.},
@@ -20,7 +71,7 @@
 
 @article{Greisen1956,
 author = {Greisen, K.},
-journal = {Progress of Theoretical Physics Supplement},
+journal = {Progr. Theor. Phys. Supp.},
 volume = {3},
 pages = {1},
 year = {1956}
@@ -29,7 +80,7 @@ year = {1956}
 @article{Kamata1958,
 author = {Kamata, Koichi and Nishimura, Jun},
 title = {The Lateral and the Angular Structure Functions of Electron Showers},
-journal = {Progress of Theoretical Physics Supplement},
+journal = {Progr. Theor. Phys. Supp.},
 volume = {6},
 pages = {93-155},
 year = {1958},
@@ -297,11 +348,11 @@ doi = {10.1143/PTPS.6.93}
 }
 
 @article{AgasaSpecPaper1995,
-   author = {{Yoshida}, S. and {Hayashida}, N. and {Honda}, K. and {Honda}, M. and 
-	{Imaizumi}, S. and {Inoue}, N. and {Kadota}, K. and {Kakimoto}, F. and 
-	{Kamata}, K. and {Kawaguchi}, S. and {Kawasumi}, N. and {Matsubara}, Y. and 
-	{Murakami}, K. and {Nagano}, M. and {Ohoka}, H. and {Teshima}, M. and 
-	{Tsushima}, I. and {Yoshii}, H.},
+   author = {Yoshida, S. and Hayashida, N. and Honda, K. and Honda, M. and 
+	Imaizumi, S. and Inoue, N. and Kadota, K. and Kakimoto, F. and 
+	Kamata, K. and Kawaguchi, S. and Kawasumi, N. and Matsubara, Y. and 
+	Murakami, K. and Nagano, M. and Ohoka, H. and Teshima, M. and 
+	Tsushima, I. and Yoshii, H.},
     title = "{The cosmic ray energy spectrum above $3\times 10^{18}$ eV measured by the Akeno Giant Air Shower Array}",
   journal = {Astroparticle Physics},
      year = 1995,
@@ -329,7 +380,7 @@ doi = {10.1143/PTPS.6.93}
 }
 
 @article{LinsleySpec1963,
-   author = {{Linsley}, J.},
+   author = {Linsley, J.},
     title = "{Primary cosmic rays of energy 10$^{17}$ to 10$^{20}$ ev, the energy spectrum and arrival directions}",
   journal = {International Cosmic Ray Conference},
      year = 1963,
@@ -565,7 +616,7 @@ year = {2000}
 }
 
 @article{Vietri1995,
-   author = {{Vietri}, M.},
+   author = {Vietri, M.},
     title = "{The Acceleration of Ultra--High-Energy Cosmic Rays in Gamma-Ray Bursts}",
   journal = {Astrophis.J.},
    eprint = {astro-ph/9506081},
@@ -667,7 +718,7 @@ particles on the front of a shock wave}",
 
 
 @article{Axford1977,
-   author = {{Axford}, W.~I. and {Leer}, E. and {Skadron}, G.},
+   author = {Axford, W.~I. and Leer, E. and Skadron, G.},
     title = "{The acceleration of cosmic rays by shock waves}",
   journal = {International Cosmic Ray Conference},
      year = 1977,
@@ -792,9 +843,9 @@ particles on the front of a shock wave}",
 }
 
 @article{Ptuskin1993,
-   author = {{Ptuskin}, V.~S. and {Rogovaya}, S.~I. and {Zirakashvili}, V.~N. and 
-	{Chuvilgin}, L.~G. and {Khristiansen}, G.~B. and {Klepach}, E.~G. and 
-	{Kulikov}, G.~V.},
+   author = {Ptuskin, V.~S. and Rogovaya, S.~I. and Zirakashvili, V.~N. and 
+	Chuvilgin, L.~G. and Khristiansen, G.~B. and Klepach, E.~G. and 
+	Kulikov, G.~V.},
     title = "{Diffusion and drift of very high energy cosmic rays in galactic magnetic fields}",
   journal = {A\&A},
      year = 1993,
@@ -861,8 +912,8 @@ year = {1961}
 
 @article{Hillas:1982wz,
       author         = "Hillas, A. M.",
-      title          = "{THE SENSITIVITY OF CHERENKOV RADIATION PULSES TO THE
-                        LONGITUDINAL DEVELOPMENT OF COSMIC RAY SHOWERS}",
+      title          = "{The Sensitivity of Cherenkov Radiation Pulses to the
+                        Longitudinal Development of Cosmic Ray Showers}",
       journal        = "J. Phys.",
       volume         = "G8",
       year           = "1982",
@@ -873,9 +924,9 @@ year = {1961}
 
 @article{Patterson:1983qj,
       author         = "Patterson, John R. and Hillas, A. M.",
-      title          = "{THE RELATION OF THE LATERAL DISTRIBUTION OF CHERENKOV
-                        LIGHT FROM COSMIC RAY SHOWERS TO THE DISTANCE OF MAXIMUM
-                        DEVELOPMENT}",
+      title          = "{The Rrelation of the Lateral Distribution of Cherenkov
+                        Light from Cosmic Rray Showers to the Distance of Maximum
+                        Development}",
       journal        = "J. Phys.",
       volume         = "G9",
       year           = "1983",
@@ -1426,7 +1477,7 @@ year = {1968}
 
 @article{Baltrusaitis:1985mx,
       author         = "Baltrusaitis, R. M. and others",
-      title          = "{THE UTAH FLY'S EYE DETECTOR}",
+      title          = "{The Utah Fly's Eye Detector}",
       journal        = "Nucl. Instrum. Meth.",
       volume         = "A240",
       year           = "1985",
@@ -2298,6 +2349,16 @@ experiment and their relevance for air shower simulations}",
 %%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%% THESIS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
+
+@phdthesis{RafaelThesis,
+  author       = "Batista, R. A.", 
+  title        = "{On the Cosmological Propagation of High
+Energy Particles in Magnetic Fields}",
+  school       = "Department of Physics, Universit$\ddot{\text{a}}$t of Hamburg",
+  year         = "2015"
+  address      = "Hamburg"
+}
+
 
 @phdthesis{GaborVeresThesis,
   author       = "Veres, G. I.", 
