--- a/main.tex
+++ b/main.tex
@@ -16,7 +16,7 @@
 \usepackage{pdfpages}
 %\usepackage{makeidx}            % para gerar índice remissimo
 
-\usepackage[num,overcite,abnt-emphasize=bf, abnt-thesis-year=both, abnt-repeated-author-omit=yes, abnt-last-names=abnt, abnt-etal-cite,abnt-etal-list=0, abnt-etal-text=default, abnt-and-type=e, iso-abbreviation=standard]{abntex2cite}
+\usepackage[num,overcite,abnt-emphasize=bf, abnt-thesis-year=both, abnt-repeated-author-omit=no, abnt-last-names=abnt, abnt-etal-cite=3,abnt-etal-list=3, abnt-etal-text=default, abnt-and-type=e, iso-abbreviation=standard]{abntex2cite}
 
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}  %Comando para inserção de símbolos em nota de rodapé
 \renewcommand{\footnotesize}{\small} %Comando para diminuir a fonte das notas de rodapé
@@ -47,7 +47,7 @@
 	pdfauthor={\@author},
 	pdfsubject={\imprimirpreambulo},
 	pdfcreator={LaTeX with abnTeX2},
-	pdfkeywords={abnt}{latex}{abntex}{USPSC}{trabalho acadêmico}, 
+	pdfkeywords={cosmic rays}{extensive air showers}{muons}, 
 	colorlinks=true,       		% false: boxed links; true: colored links
 	linkcolor=blue,          	% color of internal links
 	citecolor=blue,        		% color of links to bibliography
